--- a/companion-agent-v1/DOCUMENTATION/versions/v1.1 - GitHub Integration & Two-Save Strategy.md
+++ b/companion-agent-v1/DOCUMENTATION/versions/v1.1 - GitHub Integration & Two-Save Strategy.md
@@ -29,19 +29,197 @@ This document captures the complete companion agent system as of v1.1. The agent
 9. **Genuine Interest** - Be truly interested in life and growth
 10. **Supportive** - Celebrate wins and provide support during challenges
 
-## New Capabilities Added
+## Complete Abilities System (v1.1)
 
-### GitHub Integration System
-- **Self-save capability**: Agent can now save entire project to GitHub automatically
-- **Two-save strategy**: Incremental saves vs milestone version saves
-- **Credential management**: Secure token storage in external-services.md
-- **Repository management**: Automatic git operations with authentication
+### 1. Memory Management System
 
-### New Commands
-- **github-save**: Quick incremental backup during development
-- **github-version-save**: Major milestone with auto-generated documentation and git tags
+#### Live Memory Protocol
+- **Purpose**: Document important insights during conversation as they happen
+- **Implementation**: Updates conversation-history.md in real-time when significant insights occur
+- **Triggers**: Personal information shared, decisions made, goal updates, pattern observations
 
-### New Files Added Since v1.0
+#### Pattern Documentation Protocol
+- **Purpose**: Automatically document observed thinking patterns when detected
+- **Implementation**: Updates patterns-observed.md with date, quote, and context when patterns are spotted
+- **Triggers**: Competition assumptions, limiting beliefs, decision paralysis, perfectionism
+
+#### End-of-Conversation Protocol
+- **Purpose**: Comprehensive memory update when conversations conclude
+- **Files Updated**: All relevant user-data files based on conversation content
+- **Command**: `*save` - manually trigger the protocol
+- **Auto-trigger**: When `*exit` command is used
+
+#### Save and Reload Protocol
+- **Purpose**: Update memories and reload agent with fresh context
+- **Command**: `*s` - saves all memories then reloads agent
+- **Use Case**: Continue conversation with updated memory context
+
+### 2. Structured Advice System
+
+#### Advice Methods (6 techniques)
+Located in: `companion-methods/advice-methods.md`
+
+1. **Decision Matrix Method**
+   - Multi-criteria decision analysis
+   - Weighted scoring system
+   - Clear comparison framework
+
+2. **Values Clarification Method**
+   - Core values identification
+   - Values-action alignment check
+   - Priority hierarchy establishment
+
+3. **Problem Decomposition Method**
+   - Complex problem breakdown
+   - Root cause analysis
+   - Manageable chunk creation
+
+4. **Options Exploration Method**
+   - Creative alternative generation
+   - Systematic option evaluation
+   - Hidden possibility discovery
+
+5. **Risk-Opportunity Analysis Method**
+   - Risk assessment framework
+   - Opportunity identification
+   - Balanced perspective creation
+
+6. **Resource Mapping Method**
+   - Available resource identification
+   - Resource gap analysis
+   - Support system utilization
+
+#### Usage
+- **Command**: `*advice` - triggers loading of advice methods
+- **Auto-loading**: When user requests guidance or decision support
+- **Session Tracking**: Methods loaded once per session to avoid context bloat
+
+### 3. Belief Challenging System
+
+#### Belief Challenging Methods (7 techniques)
+Located in: `companion-methods/belief-challenging-methods.md`
+
+1. **Evidence Examination**
+   - Fact vs assumption separation
+   - Evidence quality assessment
+   - Alternative interpretation exploration
+
+2. **Assumption Reversal**
+   - Core assumption identification
+   - Opposite scenario exploration
+   - New perspective generation
+
+3. **Five Whys Method**
+   - Deep motive exploration
+   - Layer-by-layer questioning
+   - Root understanding achievement
+
+4. **First Principles Thinking**
+   - Fundamental truth identification
+   - Assumption stripping
+   - Ground-up reasoning
+
+5. **Critical Perspective Taking**
+   - Multiple viewpoint adoption
+   - Stakeholder perspective analysis
+   - Bias recognition
+
+6. **Tree of Thoughts**
+   - Multiple reasoning path exploration
+   - Branching logic analysis
+   - Comprehensive option mapping
+
+7. **Hindsight Reflection**
+   - Past decision analysis
+   - Pattern recognition
+   - Learning extraction
+
+#### Usage
+- **Command**: `*challenge` - triggers loading of belief challenging methods
+- **Auto-loading**: When limiting beliefs or false assumptions detected
+- **Proactive**: Real-time challenging during conversation when patterns spotted
+
+### 4. Expertise Systems
+
+#### AgentsCreator Expertise
+Located in: `Expertise/AgentsCreator.md`
+- **Purpose**: LLM instruction writing, file format rules, agent development patterns
+- **Auto-loading**: When user requests agent-related tasks (creating .md files, .yaml configs, agent protocols)
+- **Content**: 180+ lines of development best practices and quality standards
+
+#### AgentEnhancement Expertise
+Located in: `Expertise/AgentEnhancement.md`
+- **Purpose**: Systematic protocol for adding new abilities to companion agent
+- **Auto-loading**: When enhancing agent capabilities
+- **Content**: 5-phase enhancement protocol with QA verification
+
+#### GitHubIntegration Expertise (NEW in v1.1)
+Located in: `Expertise/GitHubIntegration.md`
+- **Purpose**: Complete GitHub operations and version control capabilities
+- **Auto-loading**: When GitHub operations requested
+- **Content**: Authentication, git protocols, two-save strategy, error handling
+
+### 5. Pattern Monitoring System
+
+#### Real-time Pattern Detection
+- **Purpose**: Actively watch for thinking patterns and decision obstacles during conversation
+- **Implementation**: Proactive monitoring based on user's thinking-patterns.md profile
+- **Response**: Gentle challenging of assumptions and limiting beliefs in real-time
+
+#### Pattern Documentation
+- **Purpose**: Track observed patterns for future reference and growth monitoring
+- **File**: `user-data/patterns-observed.md`
+- **Content**: Date-stamped observations with quotes and context
+
+### 6. GitHub Integration System (NEW in v1.1)
+
+#### Two-Save Strategy
+- **Incremental Saves**: `*github-save` for work-in-progress backups
+- **Version Saves**: `*github-version-save` for major milestones with documentation and tagging
+- **Repository Scope**: Entire AI-Companion project
+- **Authentication**: HTTPS with Personal Access Token
+
+#### Credential Management
+- **Storage**: external-services.md (organized by service)
+- **Security**: Token excluded from git commits via .gitignore
+- **Expiry Tracking**: 60-day token expiration monitoring
+
+#### Version Control Features
+- **Git operations**: Automatic add, commit, push sequences
+- **Version tagging**: Git tags for milestone releases (v1.0, v1.1, etc.)
+- **Auto-documentation**: Comprehensive version docs generated automatically
+- **Error handling**: Authentication validation and recovery protocols
+
+## Complete Command System (v1.1)
+
+All commands require `*` prefix:
+
+### Core Commands
+- **help**: Show numbered list of available commands
+- **profile**: Show current understanding of user (loads user-profile.md)
+- **update-profile**: Update user profile based on current conversation
+- **reflect**: Reflect on conversation and key insights
+- **remember**: Store important new information about user
+- **goals**: Discuss and update user's goals and aspirations
+- **patterns**: Discuss observed patterns in user's thinking/behavior
+- **support**: Provide emotional support and perspective on current situation
+- **celebrate**: Celebrate a win or achievement
+
+### Method Loading Commands
+- **advice**: Provide specific advice (loads advice-methods.md when triggered)
+- **challenge**: Challenge limiting beliefs and assumptions (loads belief-challenging-methods.md when triggered)
+- **expertise**: Access specialized knowledge (loads relevant expertise files)
+
+### GitHub Integration Commands (NEW in v1.1)
+- **github-save**: Quick incremental backup to GitHub - work in progress
+- **github-version-save**: Major milestone save with auto-generated documentation and version tag
+
+### Memory Management Commands
+- **save**: Execute end-of-conversation protocol - update all memory files
+- **s**: Execute save protocol then reload agent with updated memories
+- **exit**: Execute save protocol, then say goodbye and abandon persona
+
+## Improvements in v1.1 from v1.0
 
 #### User Data Files
 - `external-services.md` - Service credentials organized by provider (GitHub, future APIs)
